# RANC-ContractNet

./: .gitignore  .zenodo.json  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
experiments/: __init__.py  ablation_runner.py  baselines.py  benchmark_runner.py  neural_runner.py  openml_runner.py  outlier_pair_runner.py  package_artifact.py  paper_results_runner.py  public_stats_runner.py  synthetic.py  tabular_runner.py
experiments/configs/: ablation.yaml  benchmark.yaml  case_study_temporal_rare_event.yaml  openml_public.yaml  openml_template.yaml  outlier_pair.yaml  outlier_signal.yaml  scale_shift.yaml  smoke.yaml  sparse.yaml  temporal_drift.yaml
outputs/ablations/: ablation_result_paragraph.md  ablation_summary.csv  ablation_table.md  ablation_table.tex
outputs/benchmark/: benchmark_aggregate.csv  benchmark_result_paragraph.md  benchmark_summary.csv  benchmark_table.md  benchmark_table.tex
outputs/case_studies/: metrics.csv  ranc_audit.json  ranc_audit.md  temporal_rare_event_audit.md  temporal_rare_event_result_paragraph.md  temporal_rare_event_table.md  temporal_rare_event_table.tex
outputs/openml/: benchmark_aggregate.csv  exclusion_log.md  openml_pairwise_deltas.csv  openml_result_paragraph.md  openml_stats_paragraph.md  openml_summary.csv  openml_table.md  openml_table.tex  openml_task_metadata.csv  openml_task_win_loss.csv  openml_win_loss_summary.csv  openml_win_loss_table.md  openml_win_loss_table.tex
outputs/outlier_pair/: contract_causal_summary.csv  contract_causal_table.md  contract_causal_table.tex  contract_delta_stats.csv  contract_delta_table.md  contract_delta_table.tex  contract_statistical_paragraph.md  outlier_signal_noise_table.md  outlier_signal_noise_table.tex  raw_results.csv  summary.csv
outputs/sparse/: metrics.csv  ranc_audit.json  ranc_audit.md  sparse_result_paragraph.md  sparse_table.md  sparse_table.tex
outputs/temporal_drift/: metrics.csv  ranc_audit.json  ranc_audit.md  temporal_drift_result_paragraph.md  temporal_drift_table.md  temporal_drift_table.tex
paper/neurips2027/: STYLE_STATUS.md  artifact_eval.md  checklist.md  claims_boundary.md  main.tex  main_anonymous.tex  references.bib  release_snapshot.md  reproducibility.md  reviewer_packet.md  submission_readiness.md  supplementary.md
scripts/: dry_run_artifact.py  generate_paper_figures.py  render_paper.py  review_check.py
src/ranc_contractnet/: __init__.py  audit.py  cards.py  compiler.py  contracts.py  falsification.py  io.py  ledger.py  policies.py  schemas.py  sklearn.py  torch_layers.py  utils.py
tests/: test_artifact_packager.py  test_compiler.py  test_dry_run_artifact.py  test_experiments.py  test_leakage.py  test_outlier_pair_runner.py  test_paper_artifacts.py  test_render_paper.py  test_review_check.py  test_schemas.py  test_semantics.py  test_serialization.py  test_sparse.py  test_torch_layers.py
